--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -71,6 +71,7 @@
 \usepackage{caption}
 \usepackage[table,usenames,dvipsnames]{xcolor}
 \usepackage{peanutgallery}
+\usepackage{comment}
 %
 % If IEEEtran.cls has not been installed into the LaTeX system files,
 % manually specify the path to it like:
